--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.5",
+    "@angular/animations": "^11.2.1",
     "@angular/cdk": "^11.2.0",
-    "@angular/common": "10.1.5",
-    "@angular/compiler": "10.1.5",
-    "@angular/core": "10.1.5",
-    "@angular/forms": "10.1.5",
-    "@angular/localize": "^10.1.5",
+    "@angular/common": "11.2.1",
+    "@angular/compiler": "11.2.1",
+    "@angular/core": "11.2.1",
+    "@angular/forms": "11.2.1",
+    "@angular/localize": "^11.2.1",
     "@angular/material": "^11.2.0",
-    "@angular/platform-browser": "10.1.5",
-    "@angular/platform-browser-dynamic": "10.1.5",
-    "@angular/router": "10.1.5",
+    "@angular/platform-browser": "11.2.1",
+    "@angular/platform-browser-dynamic": "11.2.1",
+    "@angular/router": "11.2.1",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
@@ -38,27 +38,27 @@
     "moment": "2.29.1",
     "ngx-toastr": "13.1.0",
     "rxjs": "6.6.3",
-    "tslib": "2.0.2",
-    "zone.js": "0.11.1"
+    "tslib": "^2.0.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
-    "@angular/cli": "10.1.5",
-    "@angular/compiler-cli": "10.1.5",
+    "@angular-devkit/build-angular": "^0.1102.1",
+    "@angular/cli": "11.2.1",
+    "@angular/compiler-cli": "11.2.1",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
-    "@types/jasmine": "3.5.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jquery": "3.5.2",
     "@types/node": "14.11.5",
-    "codelyzer": "6.0.1",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "5.2.3",
-    "karma-chrome-launcher": "3.1.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
