--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "11.2.1",
     "@angular/router": "11.2.1",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "@ngtools/webpack": "^1.2.4",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
     "arrive": "2.4.1",
@@ -49,7 +50,7 @@
     "@types/chartist": "0.11.0",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "3.5.2",
-    "@types/node": "14.11.5",
+    "@types/node": "^14.11.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
