--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.1",
-    "@angular/cdk": "^11.2.0",
+    "@angular/cdk": "^11.2.1",
     "@angular/common": "11.2.1",
     "@angular/compiler": "11.2.1",
     "@angular/core": "11.2.1",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "11.2.1",
     "@angular/localize": "^11.2.1",
     "@angular/material": "^11.2.0",
