--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.1",
+    "@angular/animations": "^11.2.3",
     "@angular/cdk": "^11.2.1",
     "@angular/common": "11.2.1",
     "@angular/compiler": "11.2.1",
@@ -38,7 +38,8 @@
     "express": "4.17.1",
     "jquery": "3.5.1",
     "moment": "2.29.1",
-    "ngx-toastr": "13.1.0",
+    "ngx-toast-notifications": "^1.3.0",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
