--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/platform-browser": "11.2.1",
     "@angular/platform-browser-dynamic": "11.2.1",
     "@angular/router": "11.2.1",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngtools/webpack": "^1.2.4",
     "@ngui/map": "0.30.3",
@@ -38,6 +41,7 @@
     "express": "4.17.1",
     "jquery": "3.5.1",
     "moment": "2.29.1",
+    "ngx-show-hide-password": "^2.3.0",
     "ngx-toast-notifications": "^1.3.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "6.6.3",
