--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngtools/webpack": "^1.2.4",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
+    "angular-disable-browser-back-button": "^1.0.2",
     "arrive": "2.4.1",
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
