--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
+    "@ng-idle/core": "^10.0.0-beta.1",
+    "@ng-idle/keepalive": "^10.0.0-beta.1",
     "@ngtools/webpack": "^1.2.4",
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
     "angular-disable-browser-back-button": "^1.0.2",
+    "angular2-moment": "^1.9.0",
     "arrive": "2.4.1",
+    "bn-ng-idle": "^1.0.1",
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.3",
