--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "ngx-show-hide-password": "^2.3.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-toast-notifications": "^1.3.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "6.6.3",
