--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.3",
-    "chartist": "0.11.4",
+    "chartist": "0.11.4",    
     "core-js": "3.6.5",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "file-saver": "^2.0.5",
     "jquery": "3.5.1",
     "moment": "2.29.1",
     "ngx-show-hide-password": "^2.3.0",
@@ -53,6 +54,7 @@
     "ngx-toastr": "^13.1.0",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.9",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "@angular/compiler-cli": "11.2.1",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "3.5.2",
     "@types/node": "^14.11.5",
