--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "bootstrap": "4.5.2",
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.3",
-    "chartist": "0.11.4",    
+    "chartist": "0.11.4",
     "core-js": "3.6.5",
     "cors": "^2.8.5",
     "express": "4.17.1",
@@ -58,15 +58,15 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.1",
+    "@angular-devkit/build-angular": "^0.1102.5",
     "@angular/cli": "11.2.1",
     "@angular/compiler-cli": "11.2.1",
     "@types/bootstrap": "5.0.0",
     "@types/chartist": "0.11.0",
     "@types/file-saver": "^2.0.1",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.7",
     "@types/jquery": "3.5.2",
-    "@types/node": "^14.11.5",
+    "@types/node": "^14.14.35",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
