--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.39.14",
     "angular-disable-browser-back-button": "^1.0.2",
+    "angular-otp-box": "^1.0.1",
     "angular2-moment": "^1.9.0",
     "arrive": "2.4.1",
     "bn-ng-idle": "^1.0.1",
