--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "file-saver": "^2.0.5",
     "jquery": "3.5.1",
     "moment": "2.29.1",
+    "ng2-charts": "^2.4.3",
     "ngx-mask": "^12.0.0",
     "ngx-show-hide-password": "^2.3.0",
     "ngx-spinner": "^10.0.1",
