--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ngx-spinner": "^10.0.1",
     "ngx-toast-notifications": "^1.3.0",
     "ngx-toastr": "^13.1.0",
+    "node-sass": "^4.14.1",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
@@ -83,5 +84,21 @@
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "C:/AngularProject/GitHubIntegrationPortal/src/setupJest.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "./tsconfig.spec.json",
+        "diagnostics": false,
+        "stringifyContentPathRegex": "\\.html$",
+        "astTransformers": [
+          "C:/AngularProject/GitHubIntegrationPortal/node_modules/node_modules/jest-preset-angular/InlineHtmlStripStylesTransformer"
+        ]
+      }
+    }
   }
 }
