--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -8,5 +8,11 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "compilerOptions": {
+    //...
+    "types": [
+      "jasmine"
+    ]
+  }
 }
